# open-data-linter

./: .gitignore  .gitmodules  LICENCE  README.md  pyproject.toml  setup.py  test.py
docs/: conf.py  csvlinter.rst  excellinter.rst  index.rst
opendatalinter/: __init__.py  column_classifer.py  column_classifier.py  csv_linter.py  csv_structure_analyzer.py  errors.py  excel_linter.py  funcs.py  open_data_linter.py  regex.py  vo.py
samples/: check_1_12.csv  check_1_13.csv  check_1_2.csv  check_1_5.csv  check_2_1.csv  classify_sample.csv  expression.xlsx  nb01h0013.csv  since2003_visitor_arrivals.xlsx
tests/: test.py  test_column_classifier.py  test_csv_linter.py  test_excel_linter.py  util.py
tests/samples/: all_num.csv  check_1_11.csv  check_1_12.csv  check_1_12_2.csv  check_1_13.csv  check_1_2.csv  check_1_3.csv  check_1_5.csv  check_1_6.csv  classify_sample.csv  date.xlsx  nb01h0013.csv  nb01h0013_cp932.csv  nb01h0013_sjis.csv  perfect.csv  text.txt
