[tool.poetry]
name = "open-data-linter"
version = "0.1.1"
description = ""
authors = []
packages = [
    { include = "opendatalinter" },
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
python-multipart = "^0.0.5"
pandas = "^1.3.3"
chardet = "^4.0.0"
jeraconv = "^0.2.1"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
flake8 = "^3.9.2"
toml = "^0.10.2"

[tool.yapf]
based_on_style = "pep8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
